# GEE_data_collection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  config.yml  landsat_data_collection.py  main.py  ndvi_timeseries.csv  pyproject.toml  report.py
